@@ -27,6 +27,7 @@ extern "C" {
 
 /*
  * Gigabyte MD90-FS0-ZB
+ * Gigabyte MG20-OP0-ZB
  */
 
 /************************************************
